# balabit-os-9-linuxinfo

./: AUTHORS  COPYING  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  linuxinfo.c  linuxinfo.h  linuxinfo_alpha.c  linuxinfo_arm.c  linuxinfo_avr.c  linuxinfo_common.c  linuxinfo_hppa.c  linuxinfo_ia64.c  linuxinfo_intel.c  linuxinfo_m68k.c  linuxinfo_mips.c  linuxinfo_ppc.c  linuxinfo_s390.c  linuxinfo_sh.c  linuxinfo_sparc.c  linuxinfo_unknown.c  mkinstalldirs
debian/: NEWS  README.Debian  changelog  control  copyright  dirs  linuxinfo.bug-script  linuxinfo.docs  rules  watch
debian/tests/: control  linecount
debian/upstream/: signing-key.asc
m4/: linuxinfo-progs.m4  pcre.m4
po/: LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  linuxinfo.pot  nl.po  nn.po  pl.po  pt.po  ru.po
po4a/: Makefile.am  Makefile.in  cs.po  da.po  de.po  it.po  linuxinfo.1  linuxinfo.pot  nl.po  pl.po  po4a.cfg  pt.po  ru.po
po4a/cs/: linuxinfo.1
po4a/da/: linuxinfo.1
po4a/de/: linuxinfo.1
po4a/it/: linuxinfo.1
po4a/nl/: linuxinfo.1
po4a/pl/: linuxinfo.1
po4a/pt/: linuxinfo.1
po4a/ru/: linuxinfo.1
